# weather-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  run-debug.py
app/: config.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: weather.py
app/tests/api/api_v1/: test_weather.py
app/tests/utils/: geoip.py
app/utils/: geoip.py  httpx.py
scripts/: format.sh  lint.sh
